Add GC configs
Change-Id: I30d54a88e4fdbc030b9979076d51b860d24cf16d